--- a/python/0730_OOP_실습.md
+++ b/python/0730_OOP_실습.md
@@ -28,3 +28,21 @@ print(fake2.name()) #=>고서현 #=>허순옥
 
 `fake.seed_instance(4321)` : 인스턴스(fake)의 seed함수에 값을 지정했기 때문에 **fake만 고정된 값 호출**
 
+# 2. 0730 practice
+
+## practice 2.
+
+`random.shuffle()` 
+
+`pairs_count = len() // 2`
+
+```python
+for idx in range(pairs_count):
+	if idx == pairs_count -1: #3명 남으면 
+    	pair = self.students[idx*2:] #3명 시작되는 순간부터 끝까지 슬라이싱
+    else:
+    	pair = self.students[idx*2:(idx+1)*2] #2명씩 슬라이싱
+    pairs.append(pair)
+return pairs
+```
+
